# agentfs

./: .gitignore  README.md  plan.md  pyproject.toml
agentfs/: __init__.py  cli.py  fuse.py
scripts/: check-deps.sh  install-deps.sh
stackedfs/: __init__.py  cli.py  fuse.py
tests/: conftest.py  test_agentfs.py  test_stackedfs.py
