[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfs"
version = "1.0.0"
description = "A horizontal, merge-safe filesystem for AI agents"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyfuse3>=3.2.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
agentfs = "agentfs.cli:main"

[tool.setuptools.packages.find]
where = ["."]
